--- a/2-C-main/style.css
+++ b/2-C-main/style.css
@@ -77,3 +77,9 @@ body {
     grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
+.rodape{
+    background-color: black;
+    text-align: center;
+    color: white;
+    font-size: 25px;
+    }
