--- a/2-C-main/style.css
+++ b/2-C-main/style.css
@@ -87,3 +87,9 @@ body {
     #robotica{
         height: 100px;
     }
+    #progamacao{
+        height: 100px;
+    }
+    #matematica{
+        height: 100px;
+    }
