--- a/2-C-main/style.css
+++ b/2-C-main/style.css
@@ -28,7 +28,7 @@ header {
 
 .profissao {
     background-image: linear-gradient(#7F27FF, #9F70FD);
-    color: white;
+    color: rgb(63, 71, 157);
     display: flex;
     justify-content: center;
     align-items: center;
