--- a/2-C-main/style.css
+++ b/2-C-main/style.css
@@ -78,7 +78,7 @@ body {
 }
 
 .rodape{
-    background-color: black;
+    background-color: rgb(85, 49, 203);
     text-align: center;
     color: white;
     font-size: 25px;
